Some changes in home page , css file and js file

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>My Project</title>
 </head>
 <body>
-    
+    <h1>Lorem ipsum dolor sit amet.</h1>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia et, necessitatibus enim fugiat qui beatae sit magni quasi laboriosam architecto laborum cum? Omnis modi laborum voluptatem veniam, debitis suscipit neque.</p>
 </body>
 </html>
